--- a/Simple-Commons/src/main/res/values/dimens.xml
+++ b/Simple-Commons/src/main/res/values/dimens.xml
@@ -9,4 +9,14 @@
     <dimen name="activity_margin">16dp</dimen>
     <dimen name="bigger_margin">20dp</dimen>
     <dimen name="big_margin">24dp</dimen>
+
+    <dimen name="tiny_text_size">8sp</dimen>
+    <dimen name="small_text_size">10sp</dimen>
+    <dimen name="smaller_text_size">12sp</dimen>
+    <dimen name="normal_text_size">14sp</dimen>
+    <dimen name="bigger_text_size">16sp</dimen>
+    <dimen name="middle_text_size">17sp</dimen>
+    <dimen name="big_text_size">18sp</dimen>
+    <dimen name="actionbar_text_size">20sp</dimen>
+    <dimen name="extra_big_text_size">22sp</dimen>
 </resources>
